# izimir

./: .dockerignore  .env.example  .gitignore  Caddyfile  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tech.md
src/izimir/: __main__.py  bot_handlers.py  clients.py  config.py  db.py  exporter.py  formatter.py  groups.py  normalize.py  queue_worker.py  scanner.py  scheduler.py  texts.py
src/izimir/webapp/: __main__.py  app.py  auth.py
src/izimir/webapp/static/: app.js  index.html  style.css
tests/: conftest.py  test_auth.py  test_commands.py  test_db.py  test_exporter.py  test_formatter.py  test_matching.py  test_queue_worker.py  test_scanner.py  test_scheduler.py  test_webapp_api.py
