[project]
name = "izimir"
version = "0.1.0"
description = "Telegram userbot for real estate monitoring in Izmir"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "aiosqlite>=0.20",
    "apscheduler>=3.10,<4",
    "python-dotenv>=1.0",
    "snowballstemmer>=3.1.1",
    "tzdata>=2026.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
